adding readme file

--- a/shop/package.json
+++ b/shop/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://kacperwitkowski.github.io/proba/",
+  "homepage": "https://kacperwitkowski.github.io/React-Store/",
   "name": "shop",
   "version": "0.1.0",
   "private": true,
